fixes on small phones view with the display project page

--- a/src/styles/Navbar.css
+++ b/src/styles/Navbar.css
@@ -4,7 +4,7 @@
   justify-content: space-between;
   align-items: center;
   background: #191919;
-  z-index: 1;
+  z-index: 99;
 }
 
 .Navbar > .nav-logo {
