--- a/src/styles/ProjectDisplay.css
+++ b/src/styles/ProjectDisplay.css
@@ -58,3 +58,24 @@
     font-size: 40px;
   }
 }
+
+@media only screen and (max-width: 400px) {
+  .project {
+    flex-direction: column;
+  }
+  .project-info {
+    width: 100%;
+  }
+
+  .project img {
+    /* display: none; */
+  }
+  .project h1 {
+    margin-top: 0;
+    font-size: 35px;
+  }
+
+  .project p {
+    font-size: 16px;
+  }
+}
