--- a/src/styles/Projects.css
+++ b/src/styles/Projects.css
@@ -68,3 +68,13 @@
     height: 300px;
   }
 }
+
+@media only screen and (max-width: 400px) {
+  .projectList {
+    grid-template-columns: 1fr;
+  }
+  .projectItem {
+    width: 100%;
+    height: auto;
+  }
+}
